RESOLVED FIXED107186
ScriptDebugServer::didExecuteProgram should not try to pop stack if there is no stack to pop
https://bugs.webkit.org/show_bug.cgi?id=107186
Summary ScriptDebugServer::didExecuteProgram should not try to pop stack if there is ...
Filip Pizlo
Reported 2013-01-17 15:03:16 PST
Patch forthcoming. <rdar://problem/7710960>
Attachments
the patch (1.66 KB, patch)
2013-01-17 15:04 PST, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2013-01-17 15:04:35 PST
Created attachment 183291 [details] the patch
Geoffrey Garen
Comment 2 2013-01-17 15:07:36 PST
Comment on attachment 183291 [details] the patch r=me
Filip Pizlo
Comment 3 2013-01-17 15:54:11 PST
Note You need to log in before you can comment on or make changes to this bug.