ScriptDebugServer::didExecuteProgram should not try to pop stack if there is no stack to pop https://bugs.webkit.org/show_bug.cgi?id=107186

Reviewed by Geoffrey Garen.

No new tests, because I'm not sure how to test this. I can repro it on a gnarly web site,
but I don't know how to create a reduced case that triggers it.

* bindings/js/ScriptDebugServer.cpp:
(WebCore::ScriptDebugServer::didExecuteProgram):



Canonical link: https://commits.webkit.org/125427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140062 268f45cc-cd09-0410-ab3c-d52691b4dbfc